# BIList7

./: profile.ipynb  pyproject.toml  requirements.txt
data/: rating.csv
reports/: location_profile_report.html
