[tool.poetry]
name = "list7"
version = "0.1.0"
description = ""
authors = ["11jolek11 <dabrowskiandrzej094@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
jupyterlab = "^4.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
