[tool.poetry]
name = "list7"
version = "0.1.0"
description = ""
authors = ["11jolek11 <dabrowskiandrzej094@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
jupyterlab = "^4.1.8"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
seaborn = "0.12.2"
ydata-profiling = {extras = ["notebook", "unicode"], version = "^4.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
